# lazyadb

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md
.config/: config.json5  config.toml
src/: action.rs  app.rs  command.rs  config.rs  event.rs  keys.rs  main.rs  message.rs  msg.rs  state.rs  tui.rs
src/adb/: client.rs  device.rs  device_info.rs  emulator.rs  mod.rs
src/component/: content_area.rs  device_list.rs  emulator_list.rs  help_modal.rs  mod.rs
src/components/: mod.rs
src/components/modals/: emulators.rs  help.rs  mod.rs
src/components/panes/: content.rs  devices.rs  mod.rs
src/config/: keymap.rs  mod.rs  styles.rs
src/modals/: emulators.rs  help.rs  mod.rs
src/panes/: content.rs  devices.rs  emulators.rs  mod.rs
src/ui/: device_list.rs  emulator_list.rs  mod.rs
