[package]
name = "lazyadb"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["serde", "event-stream"] }
color-eyre = "0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-error = "0.2.1"
lazy_static = "1.5.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
json5 = "1.3.1"
strum = { version = "0.27.2", features = ["derive"] }
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
signal-hook = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
